--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,3 +40,15 @@ body nav a:hover{
 	margin-top: 30px;
 	margin-bottom: 30px;
 }
+
+.my-custom-scrollbar {
+position: relative;
+height: 395px;
+overflow: auto;
+margin-bottom: 30px;
+}
+.table-wrapper-scroll-y {
+display: block;
+}
+
+
